[ZEPPELIN-5514] Use java8
### What is this PR for?
This PR is using normal java 8 features to reduce the usage of thrid-party dependecies.

examples:
guava Joiner -> String.join
guava Lists.newArrayList(...) -> Arrays.asList(...)
guava Sets.newHashSet(...) -> new HashSet<>(Arrays.asList(...))
guava Lists.newArrayList() -> new ArrayList<>();
....

### What type of PR is it?
 -Refactoring

### What is the Jira issue?
* https://issues.apache.org/jira/browse/ZEPPELIN-5514

### How should this be tested?
* via CI

### Questions:
* Does the licenses files need update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? No

Author: Philipp Dallig <philipp.dallig@gmail.com>

Closes #4217 from Reamer/useJava8 and squashes the following commits:

3a700d0a2 [Philipp Dallig] Use try-with-resources for ZipOutputStream
72e7c010f [Philipp Dallig] Logger cleanup
b180bfc7b [Philipp Dallig] Replace some guava methods with native jdk methods or with Apache libs